# nuncio

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.json  coverage.json  docker-compose.example.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: CONFIGURATION.md  DELIVERY.md  SOURCES.md
integrations/checkmk/: README.md  notify_nuncio.py
nuncio/: __main__.py  assist.py  bundle.py  collectors.py  config.py  correlate.py  deadline.py  engine.py  envelope.py  fingerprint.py  gatherer.py  llm.py  model.py  prompt.py  redactor.py  relevance.py  render.py  replay.py  resolver.py  router.py  server.py  store.py
nuncio/clients/: __init__.py  containers.py  http.py  logs.py  metrics.py
scripts/: make_logo_badge.py
tests/: test_app.py  test_assist.py  test_assist_gate.py  test_assist_scrub.py  test_bundle.py  test_clients.py  test_clients_containers.py  test_clients_http.py  test_clients_logs.py  test_clients_metrics.py  test_collectors.py  test_config.py  test_correlate.py  test_dashboard.py  test_deadline.py  test_delivery_apprise.py  test_delivery_default_transports.py  test_delivery_dispatch.py  test_delivery_email.py  test_delivery_ntfy.py  test_delivery_registry.py  test_delivery_retrying.py  test_delivery_slack.py  test_delivery_stdout.py  test_delivery_telegram.py  test_delivery_webhook.py  test_engine.py  test_envelope.py  test_fingerprint.py  test_gatherer.py  test_knowledge_scrub.py  test_llm.py  test_main.py  test_model.py  test_notify_nuncio_plugin.py  test_prompt.py  test_redactor.py  test_relevance.py  test_render.py  test_replay.py  (+10 more)
(+21 files in other folders)
